# sqlelixir

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CHANGES.txt  Dockerfile  README.md  pyproject.toml  setup.py  test.py  test.sql
.devcontainer/: devcontainer.json
sqlelixir/: __init__.py  base.py  base_test.py  flask.py  importer.py  parser.py  pgcopy.py  pgcopy_test.py  schema_test.sql  types.py
