[tool.poetry]
name = "SQLElixir"
version = "2.0"
description = "SQL files as Python modules"
authors = ["Václav Klusák <vaclav.klusak@maptiler.com>"]

[tool.poetry.dependencies]
psycopg2-binary = "^2.8"
python = "^3.10"
SQLAlchemy = "^1.4"
sqlparse = "^0.4"

[tool.poetry.dev-dependencies]
black = "=22.3.0"
flake8 = "=4.0.1"
flake8-bugbear = "=22.1.11"
pre-commit = "=2.17.0"
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
