[tool.poetry]
name = "SQLElixir"
version = "2.14"
description = "SQL files as Python modules"
authors = ["Václav Klusák <vaclav.klusak@maptiler.com>"]

[tool.poetry.dependencies]
cattrs = { version = "^23.1", optional = true }
psycopg2-binary = "^2.8"
python = "^3.10"
SQLAlchemy = "^1.4"
sqlparse = "^0.4"

[tool.poetry.dev-dependencies]
black = "=24.2.0"
flake8 = "=7.0.0"
flake8-bugbear = "=24.2.6"
pre-commit = "=3.6.2"
pytest = "^8.0"

[tool.poetry.extras]
pgcopy = ["cattrs"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
